work on future work

--- a/main.tex
+++ b/main.tex
@@ -53,7 +53,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Math
-
+\usepackage{amsmath}
 \DeclareMathOperator*{\argmax}{arg\,max}
 \DeclareMathOperator*{\argmin}{arg\,min}
 
@@ -168,7 +168,7 @@
 \input{tex/horizontal_self_org}
 
 \setchapterpreamble[u]{\margintoc}
-\chapter{Future Work}\chlbl{future_work}
+\chapter{Future Work \& Conclusion}\chlbl{future_work}
 \input{tex/future_work}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
