--- a/main.bib
+++ b/main.bib
@@ -1644,3 +1644,83 @@ url={https://openreview.net/forum?id=HJGven05Y7},
  volume = {30},
  year = {2017}
 }
+
+ @article{Piaget_1964, title={Part I: Cognitive development in children: Piaget development and learning}, volume={2}, ISSN={0022-4308, 1098-2736}, DOI={10.1002/tea.3660020306}, number={3}, journal={Journal of Research in Science Teaching}, author={Piaget, Jean}, year={1964}, month={Sep}, pages={176–186}, language={en} }
+
+@inproceedings{DBLP:conf/bmvc/JungLO0SP22,
+  author    = {Junuk Jung and
+               Seonhoon Lee and
+               Heung{-}Seon Oh and
+               Yongjun Park and
+               Sungbin Son and
+               Joochan Park},
+  title     = {Unified Negative Pair Generation toward Well-discriminative Feature
+               Space for Face Recognition},
+  booktitle = {33rd British Machine Vision Conference 2022, {BMVC} 2022, London,
+               UK, November 21-24, 2022},
+  pages     = {421},
+  publisher = {{BMVA} Press},
+  year      = {2022},
+  url       = {https://bmvc2022.mpi-inf.mpg.de/421/},
+  timestamp = {Thu, 16 Feb 2023 16:15:43 +0100},
+  biburl    = {https://dblp.org/rec/conf/bmvc/JungLO0SP22.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@misc{1606.01540,
+  Author = {Greg Brockman and Vicki Cheung and Ludwig Pettersson and Jonas Schneider and John Schulman and Jie Tang and Wojciech Zaremba},
+  Title = {OpenAI Gym},
+  Year = {2016},
+  Eprint = {arXiv:1606.01540},
+}
+
+@inproceedings{NEURIPS2021_e614f646,
+ author = {Bengio, Emmanuel and Jain, Moksh and Korablyov, Maksym and Precup, Doina and Bengio, Yoshua},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {M. Ranzato and A. Beygelzimer and Y. Dauphin and P.S. Liang and J. Wortman Vaughan},
+ pages = {27381--27394},
+ publisher = {Curran Associates, Inc.},
+ title = {Flow Network based Generative Models for Non-Iterative Diverse Candidate Generation},
+ url = {https://proceedings.neurips.cc/paper/2021/file/e614f646836aaed9f89ce58e837e2310-Paper.pdf},
+ volume = {34},
+ year = {2021}
+}
+
+@article{Wolfrum_Wolff_Lücke_vonderMalsburg_2008, title={A recurrent dynamic model for correspondence-based face recognition}, volume={8}, ISSN={1534-7362}, DOI={10.1167/8.7.34}, number={7}, journal={Journal of Vision}, author={Wolfrum, Philipp and Wolff, Christian and Lücke, Jörg and von der Malsburg, Christoph}, year={2008}, month={Dec}, pages={34}, language={en} }
+
+@article{Willshaw_VonDerMalsburg_1979, title={A marker induction mechanism for the establishment of ordered neural mappings: its application to the retinotectal problem}, volume={287}, ISSN={0080-4622, 2054-0280}, DOI={10.1098/rstb.1979.0056}, abstractNote={This paper examines the idea that ordered patterns of nerve connections are set up by means of markers carried by the individual cells. The case of the ordered retinotectal projection in amphibia and fishes is discussed in great detail. It is suggested that retinotectal mappings are the result of two mechanisms acting in concert. One mechanism induces a set of retinal markers into the tectum. By this means, an initially haphazard pattern of synapses is transformed into a continuous or piece-wise continuous projection. The other mechanism places the individual pieces of the map in the correct orientation. The machinery necessary for this inductive scheme has been expressed in terms of a set of differential equations, which have been solved numerically for a number of cases. Straightforward assumptions are made as to how markers are distributed in the retina; how they are induced into the tectum; and how the induced markers bring about alterations in the pattern of synaptic contacts. A detailed physiological interpretation of the model is given. The inductive mechanism has been formulated at the level of the individual synaptic interactions. Therefore, it is possible to specify, in a given situation, not only the nature of the end state of the mapping but also how the mapping develops over time. The role of the modes of growth of retina and tectum in shaping the developing projection becomes clear. Since, on this model, the tectum is initially devoid of markers, there is an important difference between the development and the regeneration of ordered mappings. In the development of duplicate maps from various types of compound-eyes, it is suggested that the tectum, rather than the retina, contains an abnormal distribution of markers. An important parameter in these experiments, and also in the regeneration experiments where part-duplication has been found, is the range of interaction amongst the retinal cells. It is suggested that the results of many of the regeneration experiments (including apparently contradictory ones) are manifestations of a conflict between the two alternative ways of specifying the orientation of the map: through the information carried by the markers previously induced into the tectum and through the orientation mechanism itself.}, number={1021}, journal={Philosophical Transactions of the Royal Society of London. B, Biological Sciences}, author={Willshaw, D. J. and Von Der Malsburg, Christoph}, year={1979}, month={Nov}, pages={203–243}, language={en} }
+
+@book{wiskott1996face,
+  title={Face recognition by dynamic link matching},
+  author={Wiskott, Laurenz and von der Malsburg, Christoph},
+  year={1996},
+  publisher={Ruhr-Univ., Inst. für Neuroinformatik}
+}
+
+@article{Fernandes_vonderMalsburg_2015, title={Self-Organization of Control Circuits for Invariant Fiber Projections}, volume={27}, ISSN={0899-7667, 1530-888X}, DOI={10.1162/NECO_a_00725}, abstractNote={Assuming that patterns in memory are represented as two-dimensional arrays of local features, just as they are in primary visual cortices, pattern recognition can take the form of elastic graph matching (Lades et al., 1993 ). Neural implementation of this may be based on preorganized fiber projections that can be activated rapidly with the help of control units (Wolfrum, Wolff, Lücke, & von der Malsburg, 2008 ). Each control unit governs a set of projection fibers that form part of a coherent mapping. We describe a mathematical model for the ontogenesis of the underlying connectivity based on a principle of network self-organization as described by the Häussler system (Häussler & von der Malsburg, 1983 ), modified to be sensitive to pattern similarity and to support formation of multiple mappings, each under the command of a control unit. The process takes the form of a soft-winner-take-all, where units compete for the representation of maps. We show simulations for invariant point-to-point and feature-to-feature mappings.}, number={5}, journal={Neural Computation}, author={Fernandes, Tomas and von der Malsburg, Christoph}, year={2015}, month={May}, pages={1005–1032}, language={en} }
+ 
+@book{Marr_2010, title={Vision: A Computational Investigation into the Human Representation and Processing of Visual Information}, ISBN={978-0-262-28961-0}, url={https://direct.mit.edu/books/book/3299}, DOI={10.7551/mitpress/9780262514620.001.0001}, publisher={The MIT Press}, author={Marr, David}, year={2010}, language={en} }
+
+@article{kohler1929gestalt,
+  title={Gestalt psychology.},
+  author={Köhler, Wolfgang},
+  year={1929},
+  publisher={Liveright}
+}
+
+@article{Long_yan_chen_2021, title={A Graph Neural Network for superpixel image classification}, volume={1871}, ISSN={1742-6588, 1742-6596}, DOI={10.1088/1742-6596/1871/1/012071}, abstractNote={Abstract The classification of superpixel images by graph neural networks has gradually become a research hotspot. It is a crucial issue to embed super-pixel images from lowdimensional to high-dimensional so as to turn complex image information into graph signals. This paper proposes a method for image classification using a graph neural network (GNN) model. We convert the input image into a region adjacency graph (RAG) composed of superpixels as nodes, and use residual and concat structure to extract deep features. Finally, the loss function that increases the distance between classes and compactness within classes is used as supervision. Experiments have been tested with different numbers of superpixels on multiple datasets, and the results show that our method has a great performance in superpixel images classification.}, number={1}, journal={Journal of Physics: Conference Series}, author={Long, Jianwu and yan, Zeran and chen, Hongfa}, year={2021}, month={Apr}, pages={012071} }
+
+@inproceedings{10.5555/3327345.3327389, author = {Ying, Rex and You, Jiaxuan and Morris, Christopher and Ren, Xiang and Hamilton, William L. and Leskovec, Jure}, title = {Hierarchical Graph Representation Learning with Differentiable Pooling}, year = {2018}, publisher = {Curran Associates Inc.}, address = {Red Hook, NY, USA}, booktitle = {Proceedings of the 32nd International Conference on Neural Information Processing Systems}, pages = {4805–4815}, numpages = {11}, location = {Montreal, Canada}, series = {NIPS'18} }
+
+@article{Vasudevan_Bassenne_Islam_Xing_2023, title={Image classification using graph neural network and multiscale wavelet superpixels}, volume={166}, ISSN={01678655}, DOI={10.1016/j.patrec.2023.01.003}, journal={Pattern Recognition Letters}, author={Vasudevan, Varun and Bassenne, Maxime and Islam, Md Tauhidul and Xing, Lei}, year={2023}, month={Feb}, pages={89–96}, language={en} }
+
+@inproceedings{li2019graph,
+  title={Graph matching networks for learning the similarity of graph structured objects},
+  author={Li, Yujia and Gu, Chenjie and Dullien, Thomas and Vinyals, Oriol and Kohli, Pushmeet},
+  booktitle={International conference on machine learning},
+  pages={3835--3845},
+  year={2019},
+  organization={PMLR}
+}
+
+@book{Xu_Nikolentzos_Vazirgiannis_Boström_2022, address={Cham}, series={Studies in Computational Intelligence}, title={Image Keypoint Matching Using Graph Neural Networks}, volume={1016}, ISBN={978-3-030-93412-5}, url={https://link.springer.com/10.1007/978-3-030-93413-2_37}, DOI={10.1007/978-3-030-93413-2_37}, booktitle={Complex Networks & Their Applications X}, publisher={Springer International Publishing}, author={Xu, Nancy and Nikolentzos, Giannis and Vazirgiannis, Michalis and Boström, Henrik}, editor={Benito, Rosa Maria and Cherifi, Chantal and Cherifi, Hocine and Moro, Esteban and Rocha, Luis M. and Sales-Pardo, Marta}, year={2022}, pages={441–451}, collection={Studies in Computational Intelligence}, language={en} }
